--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -57,8 +57,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: labber
   password: 123
-  database: backend_development
+  # database: backend_development
   database: backend_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
